[package]
name = "shader"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu.git", rev = "54f6978" }

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.dev.build-override]
opt-level = 3